--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -23,4 +23,8 @@
     <%= f.text_field :email, class: "form-control" %>
   </div>
   <%= f.submit class: "btn btn-default" %>
+  <div class="form-group">
+    <%= f.label :company_id %>
+    <%= f.collection_select :company_id, Company.all, :id, :name , { include_blank: "会社を選択してください" },  { class: "form-control" } %>
+  </div>
 <% end %>
