--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -27,4 +27,8 @@
     <%= f.label :company_id %>
     <%= f.collection_select :company_id, Company.all, :id, :name , { include_blank: "会社を選択してください" },  { class: "form-control" } %>
   </div>
+  <div class="form-group">
+    <%= f.label :post_id %>
+    <%= f.collection_select :post_id, Post.all, :id, :position_name, { include_blank: "役職を選択してください" }, { class: "form-control" } %>
+  </div>
 <% end %>
