--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -41,6 +41,8 @@
         </ul>
       </div>
     <% end %>
+    
+    <%= image_tag current_user.image_url, :width =>'100', :height => '100' %>
         
     <%= form_for(@comment, url: { controller: :comments, action: :create }) do |f| %>
       <div class="form-group">
