--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,6 @@
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
-<!--********************* 下記を追加 *********************-->
       <div class="form-group">
         <%= f.label :family_name, "姓" %><br />
         <%= f.text_field :family_name, autofocus: true, class: "form-control" %>
@@ -14,10 +13,14 @@
         <%= f.label :given_name, "名" %><br />
         <%= f.text_field :given_name, class: "form-control" %>
       </div>
-<!--******************************************************-->
       <div class="form-group">
         <%= f.label :email, "電子メール" %><br />
         <%= f.email_field :email, class: "form-control" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :image_url, "プロフィール画像" %><br />
+        <%= f.text_field :image_url, class: "form-control" %>
       </div>
 
       <div class="form-group">
