課題10まで完了

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -16,10 +16,12 @@
     <%= link_to '戻る', customers_path, class: "btn btn-default" %>
     <hr />
     
- <!--********************* 下記を追加 *********************-->
     <h2>対応履歴</h2>
     <% @comments.each do |comment| %>
-     <div class="media">
+    <div class = "media">
+      <div class="media-left">
+        <%= image_tag comment.user.image_url , width:50 %>
+      </div>
         <div class="media-body">
           <%= simple_format(comment.body) %>
           <p class="text-muted">
@@ -28,8 +30,8 @@
           </p>
         </div>
       </div>
+       
     <% end %>
-<!--******************************************************-->
 
     <% if @comment.errors.any? %>
       <div class="alert alert-danger">
@@ -42,7 +44,7 @@
       </div>
     <% end %>
     
-    <%= image_tag current_user.image_url, :width =>'100', :height => '100' %>
+
         
     <%= form_for(@comment, url: { controller: :comments, action: :create }) do |f| %>
       <div class="form-group">
@@ -50,6 +52,7 @@
         <%= f.text_area :body, class: "form-control" %>
       </div>
       <%= f.hidden_field :customer_id, value: @customer.id %>
+      <%= f.hidden_field :user_id, value: current_user.id %>
       <%= f.submit class: "btn btn-default" %>
     <% end %>
   </div>
